...
    <string name="empty_list_description">"Add an app from the app list and it will show up here"</string>
    <string name="add_link">Add Link</string>
    <string name="add_from_link">Add from Link</string>
    <string name="app_link_provided_message">Copy/paste the RESPECT app link provided by the app developer</string>
    <string name="error_link_message">"ERROR: Invalid link. Please check the URL and try again."</string>
    <string name="link_label">Link*</string>
    <string name="start_date_label">Start date</string>
    <string name="end_date_label">End date</string>
    <string name="example_url_placeholder">e.g. https://</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="qr_or_password_required">QR code badge or password required</string>
    <string name="password_not_set_error">Password is required before saving</string>
    <string name="done">Done</string>
    <string name="try_it">Try it</string>
    <string name="add_app">Add to school apps</string>
    <string name="google_play">Get it on Google Play</string>
    <string name="lessons">Lessons</string>
    <string name="apps">Apps</string>
    <string name="home">Home</string>
    <string name="app">App</string>
    <string name="assignments">Assignments</string>
...
    <string name="add_assignment">Add assignment</string>
    <string name="edit_assignment">Edit assignment</string>
    <string name="classes">Classes</string>
    <string name="clazz">Class</string>
    <string name="assigned_to">Assigned to</string>
...
    <string name="reports">Reports</string>
    <string name="select_app">Select app</string>
    <string name="enter_link">Enter link</string>
    <string name="add">Add</string>
    <string name="apps_detail">App detail</string>
    <string name="lesson_list">Lesson List</string>
    <string name="search">Search</string>
...
    <string name="loading">Loading</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="all">All</string>
    <string name="active">Active</string>
...
    <string name="network_powered_by">Network powered by:</string>
    <string name="enter_invite_code_message">Enter the code provided by your teacher or school admin</string>
    <string name="invite_code_label">Invite code</string>
    <string name="enter_code_label">Enter invite code</string>
    <string name="invalid_invite_code">Invalid code, try again</string>
...
    <string name="required_field">Required field</string>
    <string name="enter_one_field">If you need response, one of the field is required</string>
    <string name="login">Login</string>
    <string name="userId_placeholder">user@school.example.org</string>
    <string name="password_label">Password</string>

    <string name="qr_badge_options">QR Badge Options</string>
...
    <string name="task_image">Task Image</string>
    <string name="password_placeholder">Enter your password</string>
    <string name="invitation">Invitation</string>
    <string name="invitation_for">Invitation for:</string>
    <string name="congratulation">Congratulations</string>
...
    <string name="i_am_student">I’m a Student</string>
    <string name="i_am_parent">I’m a Parent</string>
    <string name="accept">Accept</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="your_profile_title">Your profile</string>
    <string name="your_name_label">Your name</string>
    <string name="your_gender_label">Your gender</string>
    <string name="your_dob_label">Your date of birth</string>
    <string name="your_note">Please enter your details accurately.</string>
    <string name="date_of_birth_in_future">Date of Birth cannot be in the future.</string>
...
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="create_account">Create account</string>
    <string name="username_label">Username</string>
    <string name="qr_code_badge">QR Code Badge</string>
...
    <string name="name">Name</string>
    <string name="camera_permission">Please enable camera access in app settings to scan QR codes</string>
    <string name="other_options">Other options</string>
    <string name="scan_qr_code_badge">Scan QR code/badge</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="waiting_title">Waiting for approval</string>
    <string name="please_wait">Please wait</string>
    <string name="waiting_for_approval_to_join">Waiting for approval to join %1$s</string>
    <string name="refresh">Refresh</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="gender">Gender</string>
    <string name="teachers">Teachers</string>
    <string name="students">Students</string>
    <string name="add_teacher">Add Teacher</string>">
    <string name="add_student">Add Student</string>">
...
    <string name="pending_requests">Pending requests</string>">
    <string name="pending_requests_to_join">Pending request to join</string>">
    <string name="copy_invite_code">Copy invite code : </string>">
    <string name="share_with_link_or_qr_code">Invite with link or QR code</string>">
    <string name="share_qr_code">Share QR code</string>">
    <string name="description">Description</string>">
    <string name="unspecified">Unspecified</string>
    <string name="phone_memory">Phone memory</string>
...
    <string name="sort_by">Sort by</string>
    <string name="edit">Edit</string>
    <string name="edit_clazz">Edit class</string>
    <string name="add_clazz">Add class</string>
    <string name="settings">Settings</string>
    <string name="select_class">Select Class</string>
...
    <string name="teacher_admin_login">Teacher or admin login</string>
    <string name="school_directory">School Directory</string>
    <string name="lets_get_started">Let's get started</string>
    <string name="school_name">School name</string>
    <string name="school_name_placeholder">Type school name here...</string>
    <string name="i_have_an_invite_code">I have an invite code</string>
    <string name="invalid_school_name">Invalid school name</string>
    <string name="school_not_found">School not found: please ask your admin to add your school.</string>
...

    <string name="enter_school_link">Enter the link provided by your teacher or school admin</string>
    <string name="paste_link_here">Paste the link here</string>
    <string name="invalid_code">Invalid link, try again</string>
    <string name="passkey_title">Passwordless sign-in with passkeys</string>
...
    <string name="signing_in">Signing in</string>
    <string name="passkey_description">A passkey is a faster and safe way to sign in than a password.Your account is created with one unless you choose another option.</string>
    <string name="sign_up">Sign-up</string>
    <string name="other_way_to_sign_in">Other way to sign-in</string>

...
    <string name="profile">Profile</string>

    <string name="get_started">Get Started</string>
    <string name="onboardingTitle1">Digital Library of Edtech Apps</string>
    <string name="onboardingTitle2">Works Offline and Saves Data</string>
...
    <!-- X Axis Options -->
    <string name="year">Year</string>
    <string name="class_name">Class name</string>
    <string name="gender_literal">Gender</string>

...
    <string name="qr_code">QR code</string>
    <string name="code">Code</string>
    <string name="copy">Copy</string>
    <string name="code_private_info">
        This code is private. If it is shared with someone, they can enter this code here to join.
...
    <string name="duration_seconds_short">s</string>

    <string name="invalid_username_password">Invalid username/password</string>
    <string name="network_error_check_try_again">Network error: check your connection and try again</string>

...
